--- a/SAP/SAP/MainWindow.xaml
+++ b/SAP/SAP/MainWindow.xaml
@@ -5,24 +5,35 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAP"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid Background="White" Name="Grid" MouseDown="display_MouseDown" MouseUp="display_MouseUp" MouseMove="display_MouseMove">
+        x:Name="mainWindow"
+        Title="MainWindow" Height="350" Width="1000"
+        ContentRendered="Window_ContentRendered">
+    <Grid Background="White" Name="Grid">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Image Name="display"></Image>
+        <Image Name="display2" Grid.Column="1"></Image>
         <Rectangle Name="rectangle"  Fill="Transparent" Stroke="Yellow" Width="0" Height="0" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Top"></Rectangle>
-        <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal">
-            <Button x:Name="StartButton" Content="Start" Click="Button_Click"/>
-            <TextBlock Text="n:" Margin="5 0 0 0"/>
-            <TextBlock Text="{Binding Value, ElementName=n_images}"/>
-            <Slider Name="n_images" Minimum="1" Maximum="100" IsSnapToTickEnabled="True" Value="10" Width="200"/>
+        <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Vertical" Visibility="Collapsed">
+            <StackPanel Orientation="Horizontal">
+                <Slider Minimum="0" Maximum="255" IsSnapToTickEnabled="True" x:Name="MinHue" Value="0" Width="200"/>
+                <Slider Minimum="0" Maximum="255" IsSnapToTickEnabled="True" x:Name="MaxHue" Value="255" Width="200"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Slider Minimum="0" Maximum="255" IsSnapToTickEnabled="True" x:Name="MinSatuation" Value="0" Width="200"/>
+                <Slider Minimum="0" Maximum="255" IsSnapToTickEnabled="True" x:Name="MaxSatuation" Value="255" Width="200"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Slider Minimum="0" Maximum="255" IsSnapToTickEnabled="True" x:Name="MinValue" Value="0" Width="200"/>
+                <Slider Minimum="0" Maximum="255" IsSnapToTickEnabled="True" x:Name="MaxValue" Value="255" Width="200"/>
+            </StackPanel>
         </StackPanel>
-        <ListView Name="TrackingList" Grid.Column="1"/>
+        <ListView Name="TrackingList" Grid.Column="1" Visibility="Collapsed"/>
     </Grid>
 </Window>
