--- a/SAP/SAP/MainWindow.xaml
+++ b/SAP/SAP/MainWindow.xaml
@@ -13,16 +13,14 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Image Name="display"></Image>
-        <Rectangle Name="rectangle"  Fill="Transparent" Stroke="Yellow" Width="0" Height="0" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Top"></Rectangle>
+        <Image Name="display"/>
+        <Image Name="displayBP" Grid.Column="1"/>
+        <Rectangle Name="rectangle"  Fill="Transparent" Stroke="Yellow" Width="0" Height="0" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal">
-            <Button x:Name="StartButton" Content="Start" Click="Button_Click"/>
-            <TextBlock Text="n:" Margin="5 0 0 0"/>
-            <TextBlock Text="{Binding Value, ElementName=n_images}"/>
-            <Slider Name="n_images" Minimum="1" Maximum="100" IsSnapToTickEnabled="True" Value="10" Width="200"/>
+            <Button x:Name="StartButton" Content="Play" Click="Button_Click"/>
         </StackPanel>
-        <ListView Name="TrackingList" Grid.Column="1"/>
+        <!--<ListView Name="TrackingList" Grid.Column="1"/>-->
     </Grid>
 </Window>
